--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -10,11 +10,21 @@
 </head>
 <body>
     <div class="container">
+        <nav class="navbar navbar-light my-4">
+          <a class="navbar-brand" href="#">To-Do list</a>
+        </nav>
         {% for task in tasks %}
-            <p>task.pk. Status: task.status - Finished: task.finish_date</p>
-            <p>Task: task.description</p>
+            <p>Task #{{ task.pk }}.
+                Status: {% for option in options %}
+                            {% for key, value in option.items %}
+                                {% if task.status == key %} {{ value }} {% endif %}
+                            {% endfor %}
+                        {% endfor %} -
+                Finished: {% if task.finish_date is not None %} {{ task.finish_date }} {% endif %}</p>
+            <p>Task: {{ task.description }}</p>
         {% endfor %}
         <hr>
+        <a href="add/">Add</a>
     </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
