--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -5,29 +5,41 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+          crossorigin="anonymous">
     <title>To-Do list</title>
 </head>
 <body>
     <div class="container">
-        <nav class="navbar navbar-light my-4">
-          <a class="navbar-brand" href="#">To-Do list</a>
+        <nav class="navbar navbar-dark bg-primary mb-5">
+          <a class="navbar-brand font-weight-bold" href="/">To-Do LIST</a>
+            <a class="navbar-brand font-weight-bold" href="add/">ADD NEW</a>
         </nav>
         {% for task in tasks %}
-            <p>Task #{{ task.pk }}.
-                Status: {% for option in options %}
-                            {% for key, value in option.items %}
-                                {% if task.status == key %} {{ value }} {% endif %}
-                            {% endfor %}
-                        {% endfor %} -
-                Finished: {% if task.finish_date is not None %} {{ task.finish_date }} {% endif %}</p>
-            <p>Task: {{ task.description }}</p>
+            <div class="card bg-light mb-3">
+              <div class="card-header">Status: {% for option in options %}
+                                               {% if task.status == option.0 %} {{ option.1 }} {% endif %}
+                                               {% endfor %} <br>
+                                       Finished: {% if task.finish_date is not None %}
+                                               {{ task.finish_date }}
+                                               {% endif %}</div>
+              <div class="card-body">
+                <h5 class="card-title font-weight-bold">Task #{{ task.pk }}</h5>
+                  <p class="text-justify">Description: {{ task.description }}</p>
+              </div>
+            </div>
         {% endfor %}
-        <hr>
-        <a href="add/">Add</a>
+        <a class="btn btn-primary btn-lg btn-block mb-4" href="add/" role="button">Add</a>
     </div>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </body>
 </html>
