Changed code for status display in index.html, minor changes in index_view and task_create_view

--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -18,19 +18,17 @@
         </nav>
         {% for task in tasks %}
             <div class="card bg-light mb-3">
-              <div class="card-header">Status: {% for option in options %}
-                                               {% if task.status == option.0 %} {{ option.1 }} {% endif %}
-                                               {% endfor %} <br>
+              <div class="card-header">Status: {{ task.get_status_display }} <br>
                                        Finished: {% if task.finish_date is not None %}
                                                {{ task.finish_date }}
                                                {% endif %}</div>
               <div class="card-body">
                 <h5 class="card-title font-weight-bold">Task #{{ task.pk }}</h5>
                   <p class="text-justify">Description: {{ task.description }}</p>
-                  <form method="POST" action="{{ task.pk }}/delete/">
-               {% csrf_token %}
-                <button class="btn btn-primary btn-sm" type="submit" value="DELETE">Delete</button>
-            </form>
+                    <form method="POST" action="{{ task.pk }}/delete/">
+                        {% csrf_token %}
+                        <button class="btn btn-primary btn-sm" type="submit" value="DELETE">Delete</button>
+                    </form>
               </div>
             </div>
 
